change ui and add run show page into app

--- a/app/views/shared/_navigation.haml
+++ b/app/views/shared/_navigation.haml
@@ -1,7 +1,7 @@
 %nav#main-menu.teal.accent-4
   .container-fuild
     .nav-wrapper
-      = link_to 'Home', root_path, class: 'brand-logo'
+      = link_to 'NASB Magento <-> QBO Integration', root_path, class: 'brand-logo'
 
       %ul.right.hide-on-med-and-down
         - if user_signed_in?
