--- a/app/views/run/errors.haml
+++ b/app/views/run/errors.haml
@@ -1,18 +1,18 @@
 = title('Error Report')
 
 .row.spacing-top
-	.col.s12
-		%h3 Error Report
+  .col.s12
+    %h3 Error Report
 
-		%table.bordered.responsive-table
-			%thead
-				%tr
-					%th Magento Order ID
-					%th Error Details
-					%th Action
-			%tbody
-				- @error_reports.each do |error_report|
-					%tr
-						%td= error_report.magento_id
-						%td= RunLog.find(error_report.last_runlog_id).message
-						%td
+    %table.bordered.responsive-table
+      %thead
+        %tr
+          %th Magento Order ID
+          %th Details
+          %th Action
+      %tbody
+        - @error_reports.each do |error_report|
+          %tr
+            %td= link_to error_report.magento_id, "https://truenorthseedbank.com/index.php/admin/96admin89x55/sales_order/view/order_id/#{error_report.order_id}/", target: '_blank'
+            %td= RunLog.find(error_report.last_runlog_id).message
+            %td
