--- a/app/views/run/show.haml
+++ b/app/views/run/show.haml
@@ -5,7 +5,7 @@
     %h3 Run Report
     %small= "Run Date: #{@run.run_date.strftime("%v %R (%Z)")}"
     %br
-    %small= "Date Range: #{@run.start_date.strftime("%v %R (%Z)")} <-> #{@run.end_date.strftime("%v %R (%Z)")}"
+    %small= "Date Range: #{@run.start_date.in_time_zone('EST').strftime("%v %R (%Z)")} <-> #{@run.end_date.in_time_zone('EST').strftime("%v %R (%Z)")}"
 
     .col.s10.offset-s1.spacing-top
       %ul.collapsible{"data-collapsible" => "accordion"}
