Success failure count (#15)
* update runlogs with success and error count

* update error runlog message & add invoice id to run_log and order_log

* fixed duplicate column name on staging

* add download report link for each run

* add run_type to OrderLog & RunLog, split run show into two path and add task to able to push both credit memo and sale recript at the same time

* update styles of index and errors Run page

* update download report from xlsx to xls

* update show with button download

* update link magento production

* fixed wrong magento sale order id on download report

* fixed ui

* fixed breaking ui

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,6 @@
     - unless Rails.env.production?
       = render 'layouts/warning_message'
     = render 'shared/navigation'
-    .container
+    .container-fluid
       = render :partial => 'layouts/message_flash'
       = yield
