--- a/app/views/run/index.haml
+++ b/app/views/run/index.haml
@@ -1,7 +1,7 @@
 = title('Home Page')
 
 .row.spacing-top
-  .col.s12
+  .col.m10.col.s12.offset-m1
     - if @current_failed.present?
       .card.red.accent-4
         .card-content.white-text.center-align
