--- a/app/views/run/errors.haml
+++ b/app/views/run/errors.haml
@@ -1,7 +1,7 @@
 = title('Error Report')
 
 .row.spacing-top
-  .col.s12
+  .col.m10.col.s12.offset-m1
     %h3 Error Report
 
     %table.bordered.responsive-table
