--- a/app/views/run/show.haml
+++ b/app/views/run/show.haml
@@ -50,7 +50,7 @@
                   %thead
                     %tr
                       %th Magento Order Id
-                      %th QBO Sale Receipt Id
+                      %th Sale Receipt No.
 
                   %tbody
                     - @success_sales_receipt.each do |run_log|
@@ -59,7 +59,7 @@
                           %td= link_to run_log.magento_id, "https://truenorthseedbank.com/index.php/admin/96admin89x55/sales_order/view/order_id/#{run_log.order_id}/", target: '_blank'
                         - else
                           %td= link_to run_log.magento_id, "http://magento-89390-250626.cloudwaysapps.com/index.php/admin/96admin89x55/sales_order/view/order_id/#{run_log.order_id}/", target: '_blank'
-                        %td= link_to run_log.qbo_id, "https://ca.qbo.intuit.com/app/salesreceipt?txnId=#{run_log.qbo_id}", target: '_blank'
+                        %td= link_to run_log.doc_number.nil? ? run_log.qbo_id : run_log.doc_number, "https://ca.qbo.intuit.com/app/salesreceipt?txnId=#{run_log.qbo_id}", target: '_blank'
                 = paginate @success_sales_receipt
       .col.m6.col.s12
         .row{:style => "margin-bottom: 0;"}
@@ -104,7 +104,7 @@
                   %thead
                     %tr
                       %th Magento Order Id
-                      %th QBO Credit Memo No
+                      %th Credit Memo No.
 
                   %tbody
                     - @success_credits_memo.each do |run_log|
