add setting page with side menu

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -31,6 +31,9 @@ nav .brand-logo {
   text-align: center;
   color: white;
 }
+#settings {
+  margin: 0px;
+}
 
 @media #{$large-and-up} {
   nav .brand-logo {
