--- a/app/views/shared/_user_menu.haml
+++ b/app/views/shared/_user_menu.haml
@@ -2,6 +2,10 @@
   %ul#user-menu.dropdown-content
     %li
       = link_to 'Logout', destroy_user_session_path, method: :delete
+    %li
+      = link_to 'Settings', '/settings'
   %ul#user-menu-desktop.dropdown-content
     %li
       = link_to 'Logout', destroy_user_session_path, method: :delete
+    %li
+      = link_to 'Settings', '/settings'
