update setting side menu

--- a/app/views/shared/_settings_side_menu.haml
+++ b/app/views/shared/_settings_side_menu.haml
@@ -1,5 +1,6 @@
 %section#setting-side-menu
   %ul
-    Settings
+    %h5 
+      Settings
     %li
-      Tax Code Mapping
+      = link_to "Tax Code Mapping", 'javascript:void(0)'
