--- a/app/assets/stylesheets/shared/settings_side_menu.scss
+++ b/app/assets/stylesheets/shared/settings_side_menu.scss
@@ -1,6 +1,20 @@
 section#setting-side-menu {
-  background-color: #eeeeee;
+  color: darkcyan;
   margin-left: -10px;
   padding: 20px 30px;
-  height: 86vh;
+  height: 96vh;
+  -moz-box-shadow: inset -5px -12px 27px 0px rgba(97,95,97,1);
+  box-shadow: inset -5px -12px 27px 0px rgba(97,95,97,1);
+  position: fixed;
+  li {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 15px;
+    a {
+      color: darkcyan;
+      &:hover, &:active {
+        color: red;
+      }
+    }
+  }
 }
