--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,7 +16,15 @@
 }
 
 nav .brand-logo {
-	font-size: 20px;
+  font-size: 1.2rem;
+  padding-left: 3rem;
+  
+  @media (min-width: 375px) {
+    font-size: 20px;
+  }
+  @media (min-width: 425px) {
+    padding-left: 0;
+  }
 }
 
 .pagination {
@@ -30,6 +38,10 @@ nav .brand-logo {
   padding: 15px 0;
   text-align: center;
   color: white;
+  font-size: 1.2rem;
+  @media (min-width: 375px) {
+    font-size: 20px;
+  }
 }
 #settings {
   margin: 0px;
