update script to exclude store and include status base on system

--- a/app/views/state/index.haml
+++ b/app/views/state/index.haml
@@ -1,7 +1,7 @@
 = simple_form_for :state, url: update_state_state_index_path, method: :put do |f|
   .col.m8.col.s12.offset-m2
     %h5.title.dark-purple-text 
-      Exclude Invoice Status
+      Include Invoice Status
     .header-button
       = f.submit 'Save', class: 'btn'
       = link_to('Cancel', root_path, class: 'btn orange')
