--- a/app/views/shared/_user_menu.haml
+++ b/app/views/shared/_user_menu.haml
@@ -5,4 +5,4 @@
     %li
       = link_to 'Exclude Store', '/store'
     %li
-      = link_to 'Exclude Status', '/state'
+      = link_to 'Include Status', '/state'
