add user management

--- a/app/views/shared/_user_menu.haml
+++ b/app/views/shared/_user_menu.haml
@@ -3,6 +3,8 @@
     %li
       = link_to 'Logout', destroy_user_session_path, method: :delete
     %li
+      = link_to 'User Management', '/users'
+    %li
       = link_to 'Exclude Store', '/store'
     %li
       = link_to 'Include Status', '/state'
