--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -3,7 +3,7 @@
   = f.error_notification
   = f.full_error :confirmation_token
   .form-inputs
-    = f.input :email, required: true, autofocus: true
+    = f.input :email, required: true, autofocus: true, wrapper_html: { class: 'input-field col s12' }
   .form-actions
     = f.button :submit, "Resend confirmation instructions"
 = render "devise/shared/links"
