--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,18 +1,17 @@
+= title('Change Password')
 .row.spacing-top
   .col.s12.m8.offset-m2
     .card
-      .card-title
+      .card-title.card-header
         %h3 Reset your password
       = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
         .card-content
           = f.error_notification
           = f.input :reset_password_token, as: :hidden
           = f.full_error :reset_password_token
-          .form-inputs
-            = f.input :password, label: "New password", required: true, autofocus: true
-            %span
-              = "#{@minimum_password_length} characters minimum" if @minimum_password_length
-            = f.input :password_confirmation, label: "Confirm your new password", required: true
+          .form-inputs.row
+            = f.input :password, label: "New password", required: true, autofocus: true,  wrapper_html: { class: 'input-field col s12' }
+            = f.input :password_confirmation, label: "Confirm your new password", required: true, wrapper_html: { class: 'input-field col s12' }
         .card-action
           = f.button :submit, "Change my password"
           .input-field
