--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -6,9 +6,10 @@
         %h3 Forgot your password?
       = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
         .card-content
-          = f.error_notification
-          .form-inputs
-            = f.input :email, required: true, autofocus: true, wrapper_html: { class: 'input-field' }
+          .form-inputs.row
+            = f.error_notification
+            .form-inputs
+              = f.input :email, required: true, autofocus: true, wrapper_html: { class: 'input-field col s12' }
         .card-action
           = f.button :submit, "Send me reset password instructions"
           .input-field
