--- a/app/views/shared/_user_menu.haml
+++ b/app/views/shared/_user_menu.haml
@@ -8,3 +8,12 @@
       = link_to 'Exclude Store', '/store'
     %li
       = link_to 'Include Status', '/state'
+  %ul#user-menu.dropdown-content
+    %li
+      = link_to 'Logout', destroy_user_session_path, method: :delete
+    %li
+      = link_to 'User Management', '/users'
+    %li
+      = link_to 'Exclude Store', '/store'
+    %li
+      = link_to 'Include Status', '/state'
