update border color table failure & success

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -56,3 +56,11 @@ nav .brand-logo {
 .center-table {
   text-align: center; 
 }
+
+.success {
+  border-left: 3px solid green;
+}
+
+.failure {
+  border-left: 3px solid red;
+}
